# veille-murs-commerciaux

./: README.md  config.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: veille.yml
dashboard/: dossier_banque.py  generer.py
data/: annonces.json  benchmarks.json  dvf.json  marche.json  trajets.json
docs/: index.html
docs/dossiers/: dossier-asnieres-sur-seine-c20580d4.xlsx  dossier-asnieres-sur-seine-e0140ef8.xlsx  dossier-bagnolet-530a0f1e.xlsx  dossier-bondy-42364e9d.xlsx  dossier-bondy-8f0f272c.xlsx  dossier-choisy-le-roi-81832ef2.xlsx  dossier-choisy-le-roi-aa7de779.xlsx  dossier-colombes-25b6144e.xlsx  dossier-creteil-d82dd5e0.xlsx  dossier-ivry-sur-seine-80000082.xlsx  (+44 more)
pipeline/: comparables.py  config.py  critique.py  dedoublonnage.py  dvf.py  enrichissement.py  filtres.py  geo.py  marche.py  modeles.py  normalisation.py  notifications.py  rue.py  scoring.py  stockage.py  taux_marche.py  texte.py
sources/: __init__.py  base.py  bienici.py  bureauxlocaux.py  cessionpme.py  encheres.py  extraction.py  geolocaux.py  hektor.py  http.py  imap_alertes.py  mock.py  murscommerciaux.py  notaires.py  papcommerces.py  pointdevente.py
tests/: conftest.py  fabriques.py  test_bureauxlocaux.py  test_comparables.py  test_critique.py  test_dashboard.py  test_dedoublonnage.py  test_dossier_banque.py  test_dvf.py  test_encheres.py  test_enrichissement.py  test_filtres.py  test_geo.py  test_imap_et_notifications.py  test_marche.py  test_notaires.py  test_parsers.py  test_rue.py  test_run.py  test_scoring.py  test_taux_marche.py
(+15 files in other folders)
