[project]
name = "veille-murs-commerciaux"
version = "0.1.0"
description = "Veille automatisée d'annonces de murs commerciaux (Paris / Île-de-France)"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    'tzdata>=2024.1; sys_platform == "win32"',
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
